--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,5 @@
   "pageNotFound": "Page not found",
   "unexpectedError": "An unexpected error has occurred",
   "refreshThePage": "Refresh the page",
-  "throwError": "throw error"
+  "throwError": "Throw error"
 }
