--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,5 @@
   "pageNotFound": "Страница не найдена",
   "unexpectedError": "Произошла непредвиденная ошибка",
   "refreshThePage": "Обновить страницу",
-  "throwError": "throw error"
+  "throwError": "Throw error"
 }
